Docs(#26):Updated swagger
